# ConceptExpressions

./: CMakeLists.txt  ConceptExpression.h  LICENSE  VecExpression.h  main.cpp  replace_container.h
BinaryOperatorConceptExpressions/: BinaryOperatorConceptExpressions.h  CMakeLists.txt  main.cpp
CLoop/: main.cpp
ConceptExpressions/: CMakeLists.txt  ConceptExpressions.h  main.cpp
ConceptExpressions_1/: ConceptExpressions_1.h  main.cpp
ConceptExpressions_2/: Array.h  CMakeLists.txt  CommonVisitors.h  ConceptExpressions_2.cpp  ConceptExpressions_2.h  Concepts.h  Evaluator.h  Expressions.h  Streamer.h  Visitor.h  main.cpp
ObjectOperator/: CMakeLists.txt  ObjectOperator.cpp  ObjectOperator.h  main.cpp
OperatorConceptExpressions/: CMakeLists.txt  OperatorConceptExpressions.h  main.cpp
TemplateExpressions/: TemplateExpressions.h  main.cpp
TemplateExpressions_1/: TemplateExpressions_1.h  main.cpp
TemplateExpressions_2/: TemplateExpressions_2.h  main.cpp
VirtualObject/: VirtualObject.cpp  VirtualObject.h
Visitor/: CMakeLists.txt  Visitor.h
