cmake_minimum_required(VERSION 3.5)
project(ConceptExpressions)
add_compile_options(-fconcepts)

add_subdirectory(CLoop)
add_subdirectory(TemplateExpressions_1)
add_subdirectory(TemplateExpressions_2)
add_subdirectory(ConceptExpressions_1)
add_subdirectory(ConceptExpressions_2)
add_subdirectory(BinaryOperatorConceptExpressions)
add_subdirectory(Visitor)
